<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_apply"
        android:title="@string/apply"
        app:showAsAction="always"
        android:icon="@android:drawable/ic_menu_save" />

    <item
        android:id="@+id/action_discard"
        android:title="@string/discard"
        app:showAsAction="always"
        android:icon="@android:drawable/btn_dialog" />

    <item android:id="@+id/account_details" android:title="@string/account_details"/>
    <item android:id="@+id/contacts" android:title="@string/contacts"/>
    <item android:id="@+id/map" android:title="@string/map"/>
    <item android:id="@+id/logout" android:title="@string/logout"/>
    <item android:id="@+id/exit" android:title="@string/exit"/>
</menu>