<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.RegistrationFragment"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:background="@android:color/background_light"
            android:textSize="24sp"
            android:layout_marginBottom="2dp"
            android:hint="@string/email" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:background="@android:color/background_light"
            android:textSize="24sp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/password" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password_again"
            android:background="@android:color/background_light"
            android:textSize="24sp"
            android:layout_marginTop="2dp"
            android:hint="@string/password_again" />

        <Button
            android:text="@string/registration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/registration"
            android:layout_weight="1"
            android:onClick="onClickRegistration" />

    </LinearLayout>
</FrameLayout>
