<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_show_details"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.juras.damitest.logic.details.ShowDetailsActivity"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/photo" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="5dp">

            <EditText
                android:layout_width="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/name"
                android:layout_weight="1"
                android:hint="@string/name"
                android:background="@android:color/background_light"
                android:layout_height="30dp"
                android:layout_marginRight="5dp"
                android:selectAllOnFocus="true"
                android:tag="name"
                android:imeOptions="actionDone"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/lastname"
                android:layout_weight="1"
                android:hint="@string/lastname"
                android:background="@android:color/background_light"
                android:layout_marginLeft="5dp"
                android:selectAllOnFocus="true"
                android:tag="lastname"
                android:imeOptions="actionDone"/>

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone"
            android:hint="@string/phone"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/background_light"
            android:selectAllOnFocus="true"
            android:tag="phone"
            android:imeOptions="actionDone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:hint="@string/email"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/background_light"
            android:selectAllOnFocus="true"
            android:tag="email"
            android:imeOptions="actionDone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/description"
            android:hint="@string/description"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/background_light"
            android:selectAllOnFocus="true"
            android:tag="description"
            android:imeOptions="actionDone"/>

    </LinearLayout>

</RelativeLayout>
