<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_add_contact"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.juras.damitest.logic.contacts.AddContactActivity"
    android:background="@android:color/darker_gray">

    <LinearLayout
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                app:srcCompat="@mipmap/ic_launcher"
                android:id="@+id/profile_picture"
                android:layout_weight="1"
                android:layout_marginRight="25dp"
                android:layout_width="150dp"
                android:layout_height="125dp" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/name"
                    android:hint="@string/name"
                    android:background="@android:color/background_light"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:imeOptions="actionDone" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/lastname"
                    android:hint="@string/lastname"
                    android:background="@android:color/background_light"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"
                    android:imeOptions="actionDone"/>

            </LinearLayout>
        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/phone"
            android:hint="@string/phone"
            android:background="@android:color/background_light"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:imeOptions="actionDone"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:hint="@string/email"
            android:background="@android:color/background_light"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:imeOptions="actionDone"/>

    </LinearLayout>
</RelativeLayout>
